# topos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  enviornment.yml  pyproject.toml  requirements.txt  test_structure.py
.agents/skills/create-worktree/: SKILL.md
.agents/skills/open-github-pr/: SKILL.md
.agents/skills/run-tests/: SKILL.md
.cursor/commands/: run-tests.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
data/: aaindex_parsed_small.csv  kidera_factors.csv
example/: test_config.toml
examples/: README.md
examples/1HCK_structure_only_example/: 1HCK_config.toml  run_example.py
examples/B2AR_DMS_example/: B2AR_config.toml  B2AR_processed_scores.csv  run_example.py
examples/grouped_analysis/: 3HPQ.cif  4JLB.cif  8RJ6.cif  ADK_grouped_config.toml  run_grouped_example.py
examples/grouped_analysis/1AKE/: 1AKE_bonds.csv  1AKE_features.csv  1AKE_metadata.csv  (+1 more)
examples/grouped_analysis_example/: comparison_config.toml  run_comparison.py
grouped_analysis/: README.md  analyze_compare_packing.py  analyze_packing.py
scripts/: formatted_scores_reference_audit.py
sequence/: metrics.py  sequence_context.py
src/databases/: __init__.py  pdbtm.py
src/dev/: working_file.py
src/grouped_analysis/: README.md  __init__.py  analyze_SASA.py  analyze_compare_packing.py  analyze_sasa.py  comparator.py  comparison_metrics.py  config.py  example_config.toml  graph_diff.py  identify_variable_metrics.py  io.py  load_group_config.py  map_metric_to_b_factor.py  metrics_to_pymol.py  optimal_transport_fgw.py  pairwise_RMSD.py  plot_all_distributions.py  renumber_to_referencePDB.py  residue_diff.py  run_analysis.py  run_comparison_metrics.py  run_grouped_pipeline.py  structural_interpretation.py
src/metrics/: __init__.py  aaindex_schema.py  averaging_metrics.py  bonds.py  graph_metrics.py  mutation_category_gmm.py  neighborhood_metrics.py  registry.py  secondary_structure.py  sequence.py  structure.py
src/pipeline/: batch_processing.py  context.py  ligands.py  neighbors.py  run_logging.py  runner.py  runner.py,cover  secondary_structure_features.py  sequence_alignment.py  sequence_window_features.py
src/sequence/: metrics.py  metrics.py,cover  sequence_context.py  sequence_context.py,cover  utils.py
src/structure/: README.md  analyze_hbonds.py  analyze_packing.py  metrics.py  pdbtm.py  secondary_structure.py  structure_context.py  utils.py
structure/: README.md  analyze_hbonds.py  example_function.py  metrics.py  pdbtm.py  run_metrics.py
tests/: test_logging.py  test_utils.py
tests/databases/: test_pdbtm.py
tests/grouped_analysis/: conftest.py  test_comparator.py  test_comparison_metrics.py  test_config.py  test_graph_diff.py  test_io.py  test_renumbering.py  test_residue_diff.py  test_run_comparison_metrics.py  test_run_pipeline.py  test_variable_metrics.py
tests/metrics/: test_aaindex_schema.py  test_bonds.py  test_graph_metrics.py  test_secondary_structure.py  test_sequence.py  test_structure.py
tests/pipeline/: test_batch_processing.py  test_context.py  test_examples.py  test_ligands.py  test_neighbors.py  test_runner.py  test_secondary_structure_features.py  test_sequence_alignment.py  test_sequence_window_features.py
tests/sequence/: test_metrics.py  test_sequence_context.py  test_utils.py
tests/structure/: test_example_function.py  test_metrics.py  test_pdbtm.py  test_secondary_structure  test_secondary_structure.py  test_structure_context.py  test_utils.py
(+67 files in other folders)
