[project]
name = "biogenesis"
version = "0.1.0"
description = "A toolkit for computing and analyzing sequence/structure metrics in proteins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stephanie Wankowicz, Noah Greenwald"}]
dependencies = [
  "biotite",
  "biopython",   
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "networkx>=3.0",
  "blosum",
  "lxml",
  "tomli-w",
  "tomli",
  "pydantic",
  "pydssp"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coveralls", "ruff", "mypy"]

[project.scripts]
biogenesis = "pipeline.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



